Added the articles for the porfolio

--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -26,13 +26,6 @@
 
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
-
-  <!-- =======================================================
-  * Template Name: Personal - v2.2.0
-  * Template URL: https://bootstrapmade.com/personal-free-resume-bootstrap-template/
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
-  ======================================================== -->
 </head>
 
 <body>
@@ -46,11 +39,9 @@
         <div class="row">
 
           <div class="col-lg-8">
-            <h2 class="portfolio-title">This is an example of portfolio detail</h2>
-            <div class="owl-carousel portfolio-details-carousel">
+            <h2 class="portfolio-title">7 REASONS WHY WE ALL WANT TO BE TECHIES!</h2>
+            <div >
               <img src="assets/img/portfolio/portfolio-details-1.jpg" class="img-fluid" alt="">
-              <img src="assets/img/portfolio/portfolio-details-2.jpg" class="img-fluid" alt="">
-              <img src="assets/img/portfolio/portfolio-details-3.jpg" class="img-fluid" alt="">
             </div>
           </div>
 
@@ -59,29 +50,43 @@
             <ul>
               <li><strong>Category</strong>: Web design</li>
               <li><strong>Client</strong>: ASU Company</li>
-              <li><strong>Project date</strong>: 01 March, 2020</li>
-              <li><strong>Project URL</strong>: <a href="#">www.example.com</a></li>
             </ul>
-
-            <p>
-              Autem ipsum nam porro corporis rerum. Quis eos dolorem eos itaque inventore commodi labore quia quia. Exercitationem repudiandae officiis neque suscipit non officia eaque itaque enim. Voluptatem officia accusantium nesciunt est omnis tempora consectetur dignissimos. Sequi nulla at esse enim cum deserunt eius.
-            </p>
           </div>
+          <article class="col-lg-12">
+            <p>
+              We have all seen them around. The glasses-wearing, backpack-carrying group that speak in code. (PS: I mean this literally. They speak in JAVA, PYTON and C++). This group of technology-loving nerds are called TECHIES and here’s why almost every youth wants to be one of them:
+            </p>
 
+              <strong>The pay</strong>
+              <p>Yes, we are Nigerians, we love money. Sue us. Really though, the salary of a junior software developer is about ₦70,000 monthly and this is just an entry-level position. We’ve not even gone into other tech jobs or how much you get paid when you’ve gained experience. Now think of the average Nigerian earning 70k as his/her first salary and it’ll explain more why tech-related soft skills are much sought after these days.</p>
+
+              <strong>Age is just a number…</strong>
+              <p>And it doesn’t even matter. Most technology based jobs demand for people with skill, consistency and the ability to meet deadlines. If ‘people’ turns out to be 18-year olds, so be it. As long as they’ve got the job requirements part covered.</p>
+
+              <strong>HUBS!</strong>
+              <p>A tech hub is a physical space created to help technology startup companies thrive and succeed. They’ve got comfortable workspace, all the wifi you could dream of and most importantly, like-minded people. Tech hubs are like the techie utopias where they’ve achieved the impossible: They’ve made work fun!</p>
+
+              <strong>Nepotism doesn’t work well here</strong>
+              <p>Unlike some jobs, tech jobs are meritocratic. And we have to agree it’s quite encouraging to know you were employed because of your skills. But recruiters CAN be nepotistic though, at the risk of running their businesses to the ground. Their choice.</p>
+
+              <strong>The option to work remotely</strong>
+              <p>If you’re like me, then this is all the reason you need. Just do your job, send the work and get paid. No need for ‘nine-to-five’ work hours or work clothes. It’s like Christmas came early and you got the best gift.</p>
+
+              <strong>FREEBIES!!!</strong>
+              <p>We all like free stuff and trust me, anything that’s related to technological innovations, is a haven for them. Most tech events and workshops give gadgets as prizes and some tech jobs even come with incentives like laptops, phones etc. Amazing, right?</p>
+
+             <strong> The chance to finally make math pay, literally.</strong>
+              <p>Contrary to what you’d think, most tech based soft skills require just secondary school math knowledge like addition, subtraction, algebra, mod etc. So you don’t need to be a great mathemagician to excel in the field (Unless you wanna dive into the deep ends of 3D graphics or write your own algorithms). But the point here is, techies make those math classes in secondary school pay them. In your face, Einstein!</p>
+
+              <p>These are just seven out of a gazillion reasons why techies are all the rage. I didn’t even add how they always look cool in that ‘Mark Zuckerberg’ kinda way. Heads up people! Technology is taking over and I’d advise us not to be left behind. Peace!</p>
+            </article>
         </div>
 
       </div>
     </div><!-- End Portfolio Details -->
 
-  </main><!-- End #main -->
 
-  <div class="credits">
-    <!-- All the links in the footer should remain intact. -->
-    <!-- You can delete the links only if you purchased the pro version. -->
-    <!-- Licensing information: https://bootstrapmade.com/license/ -->
-    <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/personal-free-resume-bootstrap-template/ -->
-    Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
-  </div>
+  </main><!-- End #main -->
 
   <!-- Vendor JS Files -->
   <script src="assets/vendor/jquery/jquery.min.js"></script>
