Added more works to the portfolio

--- a/adimfp.html
+++ b/adimfp.html
@@ -39,7 +39,7 @@
           <div class="col-lg-8">
             <h2 class="portfolio-title"> A DAY IN MY FAVOURITE PLACE </h2>
             <div >
-              <img src="assets/img/portfolio/portfolio-details-1.jpg" class="img-fluid" alt="">
+              <img src="https://lh3.googleusercontent.com/AQguxobKuAyt0-Db4TWpO6KjudAyjjYSJAdZZtY1Gd39vH6fXmL-IAlo2iBVsYAZ5xxkja-J0UE_HbchICIEr5abk2RsfyqElUQLeqqJbO2B8g34YXprx74ArXVcrYQ1fmSEua-Zo3hT6czy06KA6YAjSWDkjEw1WrP867JeAWIr9ARH9aGs_OeM7r8yensirhU3ws9lvZrbMG8-wZpqk9K_hz-44ojG1b9i71IU_nIBskFWQt3-HgTil0BRrVqlOsRDb9NdtzSe01bfPSCOU4eYNns5F-aPtPhoibN3NowEiIoEze3tG_XQihu7ig8zZVtNLUiOKDsZEvzXNQRq_euYKKW3A7QH8FJfLmQYtOtnyMHPfy4rTBJX3KB07VuUEdWgmMyHpwGAJCpwjDMJ9vn4NwWhXRpz5LuGkmKL6T5zUbloX6glotQdO7Aolw_c8ctdFMG4TMfxrbAoCwH9GNj4SJAy7VN95V-wlJC7COyHZB5_53DTpc_HpCDtOM9AuB5OJjymDW0-figfkQpLkrldEgL-a4WpImWw37-TW5uxh7gKL3STl9hlyyWq33w7EIC7uNPBxIYvgcB4iX0_Bx2RbYuyEa-Wfb25_5eufc7BbCYFWeSzjVTvTXs7PFb5ZcKhuL4Ern0ZK28UebYPUzf7HDsohhfOm9YEXHiLkwQ81XcxItVrgp7UKT4__YvK5JWRrSyiJLh9ldHh6Ms3NYm2or7bV7lpnw-I2qYSfrVeNvfFhVBiVmLU=w436-h291" class="img-fluid" alt="">
             </div>
           </div>
 
