--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -41,7 +41,7 @@
           <div class="col-lg-8">
             <h2 class="portfolio-title">7 REASONS WHY WE ALL WANT TO BE TECHIES!</h2>
             <div >
-              <img src="assets/img/portfolio/portfolio-details-1.jpg" class="img-fluid" alt="">
+              <img src="https://lh3.googleusercontent.com/pw/ACtC-3ft1jiCxDoMsPpXBN6DotcNT5m1eahO9CV1Yy9DbdqUS3Q6rDEavuLS9yhszCE5bg0939Av4CjP8THs_BoNtRKfuwxL-iQ6QdPnCMQRj2weVNr9hMnIW__UBPpaQzX8Myleh_DzdIjawpwWKFBnFjuGQw=w1080-h590" class="img-fluid" alt="">
             </div>
           </div>
 
